--- a/client/subreddit.jade
+++ b/client/subreddit.jade
@@ -176,43 +176,43 @@ template(name='subreddit')
 template(name='subreddit_doc_item')                  
     .ui.ite.seg
         unless skv_is 'view_detail' true
-            .ui.stackable.equal.width.compact.grid
-                .row
-                    if embed
-                        span.rounded.full
-                            |!{embed}
-                    else if is_image
-                        .column
-                            a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
-                                img.ui.fluid.rounded.image.zoomer.toggle_view(src=data.url)
-                    else if watson.metadata.image.length
-                        .column
-                            a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
-                                img.ui.rounded.inline.image.zoomer.toggle_view(src=watson.metadata.image)
-                    // else if data.thumbnail.length
-                    //     .column
-                    //         a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
-                    //             img.ui.rounded.inline.image.zoomer(src=data.thumbnail)    
-                    .column
-                        a.ui.inline.header.view_post.zoomer(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
-                            strong #{data.ups}:
-                            |!{data.title} 
-                            // span.inline.content
-                        if watson.analyzed_text
-                            // .spacer
-                            a.f11.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
-                                |{{trunc watson.analyzed_text}}...
-                        .ui.label 
-                            i.clock.icon
-                            |{{ufrom data.created}}
-                            small ({{long_date data.created}})
-                        .ui.label(title='domain') #{data.domain}
-                        each tags
-                            +flat_sub_tag_selector
-                        if in_dev
-                            +print_this
-                        // if watson
-                        //     +doc_emotion_small
+            // .ui.stackable.equal.width.compact.grid
+            //     .row
+            if embed
+                span.rounded.full
+                    |!{embed}
+            else if is_image
+                .column
+                    a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
+                        img.ui.fluid.rounded.image.zoomer.toggle_view(src=data.url)
+            else if watson.metadata.image.length
+                .column
+                    a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
+                        img.ui.rounded.inline.image.zoomer.toggle_view(src=watson.metadata.image)
+            // else if data.thumbnail.length
+            //     .column
+            //         a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
+            //             img.ui.rounded.inline.image.zoomer(src=data.thumbnail)    
+            // .column
+            a.ui.inline.header.view_post.zoomer(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
+                strong #{data.ups}:
+                |!{data.title} 
+                // span.inline.content
+            if watson.analyzed_text
+                // .spacer
+                a.f11.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
+                    |{{trunc watson.analyzed_text}}...
+            .ui.label 
+                i.clock.icon
+                |{{ufrom data.created}}
+                small ({{long_date data.created}})
+            .ui.label(title='domain') #{data.domain}
+            // each tags
+            //     +flat_sub_tag_selector
+            if in_dev
+                +print_this
+            // if watson
+            //     +doc_emotion_small
 
             // if skv_is 'view_detail' true
             // a.ui.header.view_post.zoomer(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
