--- a/client/subreddit.jade
+++ b/client/subreddit.jade
@@ -184,11 +184,11 @@ template(name='subreddit_doc_item')
             else if is_image
                 .column
                     a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
-                        img.ui.fluid.rounded.image.zoomer.toggle_view(src=data.url)
+                        img.ui.fluid.rounded.image.toggle_view(src=data.url)
             else if watson.metadata.image.length
                 .column
                     a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
-                        img.ui.rounded.inline.image.zoomer.toggle_view(src=watson.metadata.image)
+                        img.ui.rounded.inline.image.toggle_view(src=watson.metadata.image)
             // else if data.thumbnail.length
             //     .column
             //         a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
@@ -251,10 +251,10 @@ template(name='subreddit_doc_item')
             //     div
             //     .ui.segment.say
             //         |{{nl2br data.body}}
-            if data.body_html
-                div
-                a.pointer.say(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
-                    |!{data.body_html}
+            // if data.body_html
+            //     div
+            //     a.pointer.say(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
+            //         |!{data.body_html}
             
             each tags
                 +flat_sub_tag_selector
