working ruser_omega

--- a/client/home.jade
+++ b/client/home.jade
@@ -180,7 +180,7 @@ template(name='pull_reddit')
         i.reddit.icon
         
 template(name='call_watson')
-    .ui.icon.circular.basic.button.pull
+    .ui.icon.basic.button.pull
         i.dna.large.teal.icon
 
 template(name='convert')
@@ -275,7 +275,7 @@ template(name='tone')
 
 
 template(name='call_tone')
-    button.ui.large.basic.circular.button.call
+    button.ui.large.basic.button.call
         i.download.icon
         |analyze tone
     if page_doc.tone 
