--- a/client/nav.jade
+++ b/client/nav.jade
@@ -21,7 +21,7 @@ template(name='nav')
             //     i.large.picture.grey.icon
             // a.icon.zoomer.item.goto_vid(href='/github' class="{{isActivePath regex='github'}}" title='github')
             //     i.large.grey.github.icon
-            a.icon.zoomer.red.item.clear_tags.goto_reddit(href='/reddit' class="{{isActiveRoute regex='reddit'}}" title='reddit')
+            a.icon.zoomer.item.clear_tags.goto_reddit(href='/reddit' class="{{isActiveRoute regex='reddit'}}" title='reddit')
                 i.large.reddit.grey.icon
             a.icon.zoomer.item.silence(href='#')
                 i.large.volume.mute.grey.icon
