--- a/client/ruser.jade
+++ b/client/ruser.jade
@@ -40,6 +40,7 @@ template(name='ruser')
                         i.reddit.icon
                         i.external.icon
                     +print_this
+                    +ruser_top_emotions            
                 .twelve.wide.column
                     // a.ui.button(href="/user/#{username}")
                     //     i.dashboard.icon
@@ -114,6 +115,31 @@ template(name='ruser_overview')
                 .ui.header #{title}
                     
                     
+                    
+template(name='ruser_top_emotions')
+    .ui.basic.label {{ to_percent avg_sent_score}} sentiment
+    .ui.green.basic.large.label
+        | {{ to_percent avg_joy_score}}% joyful
+        | {{fixed0 rep_joy}} ##{site_joy_rep_rank}/##{global_joy_rep_rank}
+
+    .ui.blue.basic.large.label
+        |{{fixed0 rep_sadness}} sad rep
+        | {{ to_percent avg_sadness_score}}% ##{site_sadness_rep_rank}/##{global_sadness_rep_rank}
+
+    .ui.red.basic.large.label 
+        | {{ to_percent avg_anger_score}}% angry
+        | {{fixed0 rep_anger}} rep ##{site_anger_rep_rank}/##{global_anger_rep_rank}
+
+    .ui.orange.basic.large.label
+        |{{fixed0 rep_disgust}} disgust rep
+        | {{ to_percent avg_disgust_score}}% ##{site_disgust_rep_rank}/##{global_disgust_rep_rank}
+
+    .ui.grey.basic.large.label
+        |{{fixed0 rep_fear}} fear rep
+        | {{ to_percent avg_fear_score}}% ##{site_fear_rep_rank}/##{global_fear_rep_rank}
+
+                    
+                                
                     
                     
 template(name='ruser_posts')
